# make_sunnyland

./: .gitignore  CMakeLists.txt  README.md  Tiled地图解析思路.md  main.cpp  项目结构.md
assets/: config.json  json_save.json
src/: main.cpp
src/engine/component/: colliderComponent.cpp  colliderComponent.h  component.h  parallaxComponent.cpp  parallaxComponent.h  physicsComponent.cpp  physicsComponent.h  spriteComponent.cpp  spriteComponent.h  tilelayerComponent.cpp  tilelayerComponent.h  transformComponent.cpp  transformComponent.h
src/engine/core/: GameApp.cpp  GameApp.h  Time.cpp  Time.h  config.cpp  config.h  context.cpp  context.h
src/engine/input/: inputManager.cpp  inputManager.h
src/engine/object/: gameObject.cpp  gameObject.h
src/engine/physics/: collider.h  collision.cpp  collision.h  physicsEngine.cpp  physicsEngine.h
src/engine/render/: camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.h
src/engine/resource/: FontManager.cpp  FontManager.h  MusicManager.cpp  MusicManager.h  ResourceManager.cpp  ResourceManager.h  TextureManager.cpp  TextureManager.h
src/engine/scene/: levelLoader.cpp  levelLoader.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
src/engine/utils/: math.h
src/game/scene/: gameScene.cpp  gameScene.h
